--- a/views/home.mustache
+++ b/views/home.mustache
@@ -168,6 +168,6 @@
 			$(this).html(visitors + " going");
 		});
 	</script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBW8dmTjdmfb2isQA9yO2x-NWmWI8zHpsA&cx=008167733778276982844:_ybjsd3ch4m&signed_in=true&libraries=places&callback=initGoogleAPI" async defer></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=<key>&signed_in=true&libraries=places&callback=initGoogleAPI" async defer></script>
 </body>
 </html>
